prevent "hyphenated" complex numbers in drag-handles from wrapping

--- a/domkol.css
+++ b/domkol.css
@@ -43,6 +43,7 @@ text.coordinates {
   margin: 0 0;
   line-height: 100%;
   background-color: rgba(255,255,255,0.35);
+  white-space: nowrap;
 }
 
 .point-circle {
